--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "git.branchProtection": [
         "main"
-    ]
+    ],
+    "git.pruneOnFetch": true,
+    "git.useEditorAsCommitInput": false
 }
