add db seed + reorganize tests

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/oleksii-devico/aqa-cources-practice#readme",
   "devDependencies": {
+    "axios": "^0.27.2",
     "cypress": "^10.3.1"
   }
 }
